--- a/app/src/main/res/layout/prompts.xml
+++ b/app/src/main/res/layout/prompts.xml
@@ -4,22 +4,62 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:padding="10dp" >
+    android:padding="10dp"
+    >
 
-    <TextView
-        android:id="@+id/txtPrompt"
+  <TextView
+      android:id="@+id/txtPrompt"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Type Your Comments : "
+      android:textAppearance="?android:attr/textAppearanceLarge"
+      />
+
+  <AutoCompleteTextView
+      android:id="@+id/autoCompleteTextView"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      />
+
+  <RadioGroup
+      android:id="@+id/radioGroup"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:longClickable="false"
+      android:orientation="vertical"
+      >
+
+    <RadioButton
+        android:id="@+id/radioRepo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Type Your Comments : "
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:checked="true"
+        android:text="@string/radio_repository"
+        />
 
-    <EditText
-        android:id="@+id/editTextDialogUserInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+    <RadioButton
+        android:id="@+id/radioUser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:enabled="false"
+        android:text="@string/radio_user"
+        />
 
-        <requestFocus />
+    <RadioButton
+        android:id="@+id/radioIssue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:enabled="false"
+        android:text="@string/radio_issue"
+        />
 
-    </EditText>
+    <RadioButton
+        android:id="@+id/radioOwner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/radio_owner"
+        />
+
+  </RadioGroup>
 
 </LinearLayout>
